--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default"
 title                    : "Shepard Rodgers"
 title_separator          : "-"
 name                     : &name "Shepard Rodgers"
-description              : &description "Tufts University undergrad, studying Computer Science and Science, Technology, and Society (STS). "
+description              : &description "Tufts University student studying Computer Science & Science, Technology, and Society (STS), with an interest in Public Interest Tech and AI Safety"
 url                      : https://ShepardRodgers.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ShepardRodgers/ShepardRodgers.github.io"
