--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "ShepardRodgers/ShepardRodgers.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "Headshot-PIT.png"
   name             : "Shepard Rodgers"
   pronouns         : # example: "she/her"  
   bio              : "Studying CS and STS (Science, Technology, and Society) at Tufts. Interested in safe, innovative, & community-centered applications of AI."
