Updated short bio

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "Headshot-PIT.png"
   name             : "Shepard Rodgers"
   pronouns         : # example: "she/her"  
-  bio              : "Studying CS and STS (Science, Technology, and Society) at Tufts. Interested in safe, innovative, & community-centered applications of AI."
+  bio              : "Focused on building safe, innovative, and community-centered implementations of AI."
   location         : "Medford, MA"
   employer         : "Tufts University"
   uri              : # URL
