--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   keybase          : # Username
   instagram        : shepard.rodgers
   lastfm           : # Username
-  linkedin         : shepard rodgers
+  linkedin         : shepard-rodgers
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
