Created organizations page

--- a/_config.yml
+++ b/_config.yml
@@ -225,6 +225,9 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
+  organizations:
+    output: true
+    permalink: /organizations/:path/
   talks:
     output: true
     permalink: /:collection/:path/
